# SvgToRaster

./: .gitignore  CMakeLists.txt  Custom.cmake  README.md  TODO.md
.github/workflows/: build_cmake.yml
build_commands/: 0_load_qt.bash  0_load_qt_mingw.bash  1_clean.zsh  1_clean_config_build.bash  1_clean_config_build.bat  1_clean_config_build.zsh  1_config_mingw64.bash  2_build.bat  2_config_build.bash  2_config_build.bat  2_config_build.zsh  2_install.bat  3_install.bash  3_install.bat  3_install.zsh  3_run.bat  4_build-docs_html.bat  4_pack_distrib.bat  4_pack_sources.bat  4_run.bash  4_run.bat  4_run.zsh  4_run_valgrind.bash  5_build-docs_html.bash  5_build-docs_html.bat  5_build-docs_html.zsh  5_build-docs_pdf.bash  5_build-docs_pdf.bat  5_build-docs_pdf.zsh  5_pack_distrib.bash  5_pack_distrib.bat  5_pack_distrib.zsh  5_pack_sources.bash  5_pack_sources.bat  5_pack_sources.zsh  6_check_pvs.bash  6_check_pvs.bat  6_check_pvs.zsh
build_scripts/: 0_setup_qt.cmake  1_clean_config.cmake  1_clean_config_build.cmake  1_config.cmake  2_build.cmake  2_config_build.cmake  2_install.cmake  3_install.cmake  3_run.cmake  4_build-docs_html.cmake  4_build-docs_pdf.cmake  4_pack_distrib.cmake  4_pack_sources.cmake  4_run.cmake  5_build-docs_html.cmake  5_build-docs_pdf.cmake  5_check_pvs.cmake  5_pack_distrib.cmake  5_pack_sources.cmake  6_check_pvs.cmake  build_build.cmake  build_config.cmake  build_html.cmake  build_install.cmake  build_pack_distrib.cmake  build_pack_sources.cmake  build_pdf.cmake  build_set_builddir.cmake  build_set_compiler.cmake  build_set_config.cmake  build_set_generator.cmake  build_set_loglevel.cmake  build_set_qt.cmake  build_set_source.cmake
doc/: doxygen.sty  header.tex  stylesheet.css
scripts/: CPpack.cmake  build_ext_binary.cmake  collect_deps.cmake  get_file_deps.cmake  produce_html.cmake  produce_pdf.cmake  remove_zerofile.cmake
src/svgtoraster/: CMakeLists.txt  Info.plist.in  Task.cpp  Task.h  arg_parser.cpp  arg_parser.h  bootstrap.cpp  bootstrap.h  bplist.cpp  bplist.h  build_icns.cpp  build_icns.h  build_ico.cpp  build_ico.h  main.cpp  stdafx.h  task.cpp  task.h  подход.txt
src/svgtoraster/translations/: candle_ru.ts  svgtoraster_en.ts  svgtoraster_ru.ts
tests/: Original.xml  bPlist.odt  bplist.txt  bplist_1.txt  exapmles.txt  info.txt  url.txt
tests/AppleSource/: CFBase.c  CFBase.h  CFBinaryPlist.c  CFData.h  CFDate.c  CFDate.h  CFNumber.c  CFNumber.h  CFString.c  CFUniChar.c  CFUniChar.h  CFUniCharPriv.h  candle.icns
tests/DeSerialize/: Deserialized.json  unpack.py
